Fix mobile overflow of temp-conversion-flex.

--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ button{
     .temp-conversion-flex{
         flex-direction: column;
         width: 90%;
+        height: 100%;
         margin: 0 auto;
         margin-top: 2rem;
     }
